add main home image and style sizing

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <!--bootstrap navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Thoresby Vale Country Park</a>
+          <a class="navbar-brand" href="index.html">Thoresby Vale Country Park</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -37,6 +37,9 @@
           </div>
         </div>
       </nav>
+      <section id="mainimg">
+          <img id="park" src="assets/images/thoresbyvale.jpg" alt="Thoresby Vale Arial View">
+      </section>
     
 </body>
 </html>
