add footer to page, add social media links through icons (tested) footer initial styling started

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Slab&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <title>Thoresby Vale Country Park</title>
 </head>
 <body>
@@ -40,6 +41,22 @@
       <section id="mainimg">
           <img id="park" src="assets/images/thoresbyvale.jpg" alt="Thoresby Vale Arial View">
       </section>
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <a href="http://facebook.com" target="_blank"> <i class="fab fa-facebook"></i></a>
+            </div>
+            <div class="col">
+              <a href="http://twitter.com" target="_blank"> <i class="fab fa-twitter"></i></a>
+            </div>
+            <div class="col">
+              <a href="http://instagram.com" target="_blank"> <i class="fab fa-instagram"></i></a>
+            </div>
+          </div>
+        </div>
+        
+      </footer>
     
 </body>
 </html>
