adjusting layout, three main home screen pictures added

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="#">Activities</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="#">Area</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link">Contact</a>
@@ -38,8 +38,20 @@
           </div>
         </div>
       </nav>
-      <section id="mainimg">
-          <img id="park" src="assets/images/thoresbyvale.jpg" alt="Thoresby Vale Arial View">
+      <section class="description">
+        <div class="container">
+           <div class="row">
+            <div class="col">
+              <img src="assets/images/thoresbyvale.jpg">
+            </div>
+            <div class="col">
+              <img src="assets/images/forest-1072828_1280.jpg">
+            </div>
+            <div class="col">
+              <img src="assets/images/glamping-1695468_1280.jpg">
+            </div>
+          </div>
+        </div>
       </section>
       <footer>
         <div class="container">
