--- a/index.html
+++ b/index.html
@@ -42,12 +42,15 @@
         <div class="container">
            <div class="row">
             <div class="col">
+              <h3>Thoresby Vale Country Park</h3>
               <img src="assets/images/thoresbyvale.jpg">
             </div>
             <div class="col">
+              <h3>Beautiful Forestry</h3>
               <img src="assets/images/forest-1072828_1280.jpg">
             </div>
             <div class="col">
+              <h3>Glamping Pods Available</h3>
               <img src="assets/images/glamping-1695468_1280.jpg">
             </div>
           </div>
