--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
           </div>
         </div>
       </nav>
-      <section class="description">
+      <!--central images and headers section-->
+      <section class="main-grid">
         <div class="container">
            <div class="row">
             <div class="col">
@@ -56,6 +57,14 @@
           </div>
         </div>
       </section>
+      <section class="welcome">
+        <h3> <i class="fas fa-tree"></i> Why choose us for your next family trip or holiday? <i class="fas fa-tree"></i> </h3>
+        <p>We offer an abundance of activities to suit all needs. Whether that be a challenging hike up the hills of Thoresby, or a intense cycle route with plenty of jumps and challening terrain for the experienced cyclists.</p>
+          <h3> <i class="fas fa-campground"></i> Why not extend your stay? <i class="fas fa-campground"></i></h3> 
+          <p>Take advantage of our fresh purpose build Glamping pods to give you the true forest experience.</p>
+        </p>
+      </section>
+      <!--footer section-->
       <footer>
         <div class="container">
           <div class="row">
