--- a/index.html
+++ b/index.html
@@ -55,19 +55,22 @@
               <img src="assets/images/glamping-1695468_1280.jpg">
             </div>
           </div>
-        </div>
-      </section>
-      <section class="welcome">
-        <h3> <i class="fas fa-tree"></i> Why choose us for your next family trip or holiday? <i class="fas fa-tree"></i> </h3>
-        <p>We offer an abundance of activities to suit all needs. Whether that be a challenging hike up the hills of Thoresby, or a intense cycle route with plenty of jumps and challening terrain for the experienced cyclists.</p>
-          <h3> <i class="fas fa-campground"></i> Why not extend your stay? <i class="fas fa-campground"></i></h3> 
-          <p>Take advantage of our fresh purpose build Glamping pods to give you the true forest experience.</p>
-        </p>
+          <br>
+          <div class="row">
+            <div class="col welcome">
+              <h3> <i class="fas fa-tree"></i> Why choose us for your next family trip or holiday? <i class="fas fa-tree"></i> </h3>
+              <p>We offer an abundance of activities to suit all needs. Whether that be a challenging hike up the hills of Thoresby, or a intense cycle route with plenty of jumps and challening terrain for the experienced cyclists.</p>
+              <h3> <i class="fas fa-campground"></i> Why not extend your stay? <i class="fas fa-campground"></i></h3> 
+              <p>Take advantage of our fresh purpose build Glamping pods to give you the true forest experience.</p>
+              </p>
+            </div>
+          </div>
+        </div> 
       </section>
       <!--footer section-->
-      <footer>
-        <div class="container">
-          <div class="row">
+      <section>
+        <div class="container-footer">
+          <div class="row align-items-center">
             <div class="col">
               <a href="http://facebook.com" target="_blank"> <i class="fab fa-facebook"></i></a>
             </div>
@@ -79,8 +82,7 @@
             </div>
           </div>
         </div>
-        
-      </footer>
+      </section>
     
 </body>
 </html>
