--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             <a class="nav-link active" id="link" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="link" href="#">Activities</a>
+            <a class="nav-link" id="link" href="activities.html">Activities</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" id="link" href="#">Area</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="link" href="#">Contact Us</a>
+            <a class="nav-link" id="link" href="#">Contact</a>
           </li>
         </ul>
       </div>
@@ -70,7 +70,8 @@
           <h3> <i class="fas fa-tree"></i> Why choose us for your next family trip or holiday? <i
               class="fas fa-tree"></i> </h3>
           <p>We offer an abundance of activities to suit all needs. Whether that be a challenging hike up the hills of
-            Thoresby, or a intense cycle route with plenty of jumps and challening terrain for the experienced cyclists.
+            Thoresby, or an intense cycle route with plenty of jumps and challening terrain for the experienced
+            cyclists.
           </p>
           <h3> <i class="fas fa-campground"></i> Why not extend your stay? <i class="fas fa-campground"></i></h3>
           <p>Take advantage of our brand new Glamping pods to give you the true forest experience.</p>
