add media query for main image sizing on index page to allow responsiveness down to 320px

--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
   <section class="main-grid">
     <div class="container-fluid">
       <div class="row">
-        <div class="col">
+        <div class="col-sm">
           <h3>Walking Routes</h3>
           <img src="assets/images/thoresbyvale.jpg">
         </div>
-        <div class="col">
+        <div class="col-sm">
           <h3>Beautiful Forestry</h3>
           <img src="assets/images/forest-1072828_1280.jpg">
         </div>
-        <div class="col">
+        <div class="col-sm">
           <h3>Glamping Pods Available</h3>
           <img src="assets/images/glamping-1695468_1280.jpg">
         </div>
