add page headings, nearby attractions list and style and iframe edwinstowe google map

--- a/activities.html
+++ b/activities.html
@@ -44,7 +44,47 @@
         </div>
     </nav>
     <section>
-        Activities page
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <h3>Cycling Courses</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <h3>Hiking Routes</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-8">
+                    <h3>Glamping Site</h3>
+                </div>
+                <div class="col-sm activity-list">
+                    <h3>Nearby Attractions</h3>
+                    <h6>Outdoor Activities</h6>
+                    <ul>
+                        <li>Sherwood Forest Country Park</li>
+                        <li>Rufford Abbey Country Park</li>
+                        <li>Edwinstowe Cricket Club</li>
+                    </ul>
+                    <h6>Shops and Services</h6>
+                    <ul>
+                        <li>Edwinstowe Co-Op</li>
+                        <li>Post Office</li>
+                        <li>Ollerton Tesco and Fuel Station</li>
+                    </ul>
+                    <h6>Bars and Restaraunts</h6>
+                    <ul>
+                        <li>Royal Oak Bar and Restaraunt</li>
+                        <li>Launays Tapas and Bar</li>
+                        <li>Smoke and Ice Bar and Restaraunt</li>
+                    </ul>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19125.310241976742!2d-1.0825889254403605!3d53.18801088120139!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4879b06bfa8afb65%3A0x50e1ca8bbc34700!2sEdwinstowe%2C%20Mansfield!5e0!3m2!1sen!2suk!4v1632737192352!5m2!1sen!2suk"
+                        width="400" height="300"></iframe>
+                </div>
+            </div>
+        </div>
     </section>
     <!--footer section-->
     <section>
