--- a/activities.html
+++ b/activities.html
@@ -44,47 +44,76 @@
         </div>
     </nav>
     <section>
-        <div class="container">
+        <div class="container activities">
             <div class="row">
                 <div class="col-sm">
-                    <h3>Cycling Courses</h3>
+                    <h3>Cycling Courses <i class="fas fa-biking"></i></h3>
+                    <h6>Pre-defined Routes</h6>
+                    <p>We have six routes designed for all experience levels and ages.
+                        There is a selection of bikes to rent (these will require pre-booking before your visit) if you
+                        need to do so.
+                        We have placed numerous amounts of drink stations and toilets around the park.
+                        All facilities will be marked on a map given to you on entrance to the park so please keep this
+                        with you.
+                        Please see all routes below </p>
+                    <ul class="cycling-routes">
+                        <li>Beginner Routes
+                            <ul class="routes">
+                                <li>Robin Hood Sprint</li>
+                                <li>Sherwood Corner</li>
+                            </ul>
+                        </li>
+                        <li>Intermediate Routes
+                            <ul class="routes">
+                                <li>Lady Marian Way</li>
+                                <li>Miners Climb</li>
+                            </ul>
+                        </li>
+                        <li>Extreme Routes
+                            <ul class="routes">
+                                <li>Thoresby Colliery Rush</li>
+                                <li>Mountain Sprint</li>
+                            </ul>
+                        </li>
+                    </ul>
+
+
+                </div>
+                <div class="row">
+                    <div class="col-sm">
+                        <h3>Hiking Routes <i class="fas fa-hiking"></i></h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-8">
+                        <h3>Glamping Site <i class="fas fa-campground"></i></h3>
+                    </div>
+                    <div class="col-sm activity-list">
+                        <h3>Nearby Attractions</h3>
+                        <h6>Outdoor Activities</h6>
+                        <ul>
+                            <li>Sherwood Forest Country Park</li>
+                            <li>Rufford Abbey Country Park</li>
+                            <li>Edwinstowe Cricket Club</li>
+                        </ul>
+                        <h6>Shops and Services</h6>
+                        <ul>
+                            <li>Edwinstowe Co-Op</li>
+                            <li>Post Office</li>
+                            <li>Ollerton Tesco and Fuel Station</li>
+                        </ul>
+                        <h6>Bars and Restaraunts</h6>
+                        <ul>
+                            <li>Royal Oak Bar and Restaraunt</li>
+                            <li>Launays Tapas and Bar</li>
+                            <li>Smoke&Ice Bar and Restaraunt</li>
+                        </ul>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19125.310241976742!2d-1.0825889254403605!3d53.18801088120139!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4879b06bfa8afb65%3A0x50e1ca8bbc34700!2sEdwinstowe%2C%20Mansfield!5e0!3m2!1sen!2suk!4v1632737192352!5m2!1sen!2suk"
+                            alt="edwinstowe google map link" width="400" height="300"></iframe>
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm">
-                    <h3>Hiking Routes</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-8">
-                    <h3>Glamping Site</h3>
-                </div>
-                <div class="col-sm activity-list">
-                    <h3>Nearby Attractions</h3>
-                    <h6>Outdoor Activities</h6>
-                    <ul>
-                        <li>Sherwood Forest Country Park</li>
-                        <li>Rufford Abbey Country Park</li>
-                        <li>Edwinstowe Cricket Club</li>
-                    </ul>
-                    <h6>Shops and Services</h6>
-                    <ul>
-                        <li>Edwinstowe Co-Op</li>
-                        <li>Post Office</li>
-                        <li>Ollerton Tesco and Fuel Station</li>
-                    </ul>
-                    <h6>Bars and Restaraunts</h6>
-                    <ul>
-                        <li>Royal Oak Bar and Restaraunt</li>
-                        <li>Launays Tapas and Bar</li>
-                        <li>Smoke and Ice Bar and Restaraunt</li>
-                    </ul>
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19125.310241976742!2d-1.0825889254403605!3d53.18801088120139!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4879b06bfa8afb65%3A0x50e1ca8bbc34700!2sEdwinstowe%2C%20Mansfield!5e0!3m2!1sen!2suk!4v1632737192352!5m2!1sen!2suk"
-                        width="400" height="300"></iframe>
-                </div>
-            </div>
-        </div>
     </section>
     <!--footer section-->
     <section>
