--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <h3> <i class="fas fa-tree"></i> Why choose us for your next family trip or holiday? <i
               class="fas fa-tree"></i> </h3>
           <p>We offer an abundance of activities to suit all needs. Whether that be a challenging hike up the hills of
-            Thoresby, or an intense cycle route with plenty of jumps and challening terrain for the experienced
+            Thoresby, or an intense cycle route with plenty of jumps and challenging terrain for the experienced
             cyclists.
           </p>
           <h3> <i class="fas fa-campground"></i> Why not extend your stay? <i class="fas fa-campground"></i></h3>
