add video and text section to area page and started initial styling

--- a/area.html
+++ b/area.html
@@ -44,7 +44,35 @@
         </div>
     </nav>
     <section>
-        Area page
+        <div class="container-video">
+            <div class="row">
+                <div class="col-sm video-text">
+                    <h3>Thoresby Vale New Build Village</h3>
+                    <p>Thoresby Vale is a brand new development situated in Edwinstowe. Thoresby Vale is set to home the
+                        following -</p>
+                    <ul>
+                        <li>800 Brand New Homes from Leading Housing Developers
+                            <ul class="developers">
+                                <li><a href="https://www.harronhomes.com/find-a-home/nottinghamshire/thoresby-vale/">Harron
+                                        Homes</a></li>
+                                <li><a href="https://www.dwh.co.uk/new-homes/nottinghamshire/h806601-thoresby-vale/">David
+                                        Wilson Homes</a>
+                            </ul>
+                        </li>
+                        <li>Doctors Surgery & Dentist Practise</li>
+                        <li>Primary School</li>
+                        <li>Bars and Restaraunts</li>
+                        <li>Souvenir Shops</li>
+                        <li>Grocery Store</li>
+                    </ul>
+                </div>
+                <div class="col-sm">
+                    <iframe src="https://www.youtube.com/embed/0RPUWoB8Zvw" alt="Thoresby Vale village video"
+                        id="thoresby-vale" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+
     </section>
     <!--footer section-->
     <section>
