found index.html to area and contact not linked - fixed

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <a class="nav-link" id="link" href="activities.html">Activities</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="link" href="#">Area</a>
+            <a class="nav-link" id="link" href="area.html">Area</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="link" href="#">Contact</a>
+            <a class="nav-link" id="link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
