added design styling to all text sections white background margins and borders introduced classes for each and identified in the CSS

--- a/activities.html
+++ b/activities.html
@@ -46,8 +46,8 @@
     <section>
         <br>
         <div class="container activities">
-            <div class="row">
-                <div class="col-sm">
+            <div class="row-contain">
+                <div class="col-sm activity-text">
                     <h3>Cycling Courses <i class="fas fa-biking"></i></h3>
                     <h6>Pre-defined Routes</h6>
                     <p>We have six routes designed for all experience levels and ages.
@@ -78,63 +78,64 @@
                         </li>
                     </ul>
                 </div>
-                <div class="row">
-                    <div class="col-sm">
-                        <h3>Hiking Routes <i class="fas fa-hiking"></i></h3>
-                        <p>Explore the 500 acre park through our beautiful hiking routes. Our hiking routes have drinks
-                            stations and toilets dotted around so no need to worry! Our team of rangers are consistently
-                            driving round the park doing their day to day roles, but fear not they are there to help you
-                            if needs be also!
-                            <br>
-                            We suggest you cater 3 hours of your day if you wish to see everything the park has to offer
-                            for day trippers only</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-8">
-                        <h3>Glamping Site <i class="fas fa-campground"></i></h3>
-                        <img src="assets/images/pod.jpg" id="pod">
-                        <p>We have 15 glamping pods available to book now! All glamping customers get free entry into
-                            the park!
-                            <br>
-                            All Pods Include -
-                        </p>
-                        <ul>
-                            <li>Sleeps up to 4 people</li>
-                            <li>Free WIFI (Password left in pod)</li>
-                            <li>Complimentary Tea & Coffee</li>
-                            <li>1 Double Bed & 1 Sofa Bed</li>
-                            <li>Fresh Bedding & Towels provided for you</li>
-                            <li>Bathroom with Shower</li>
-                            <li>Underfloor Heating for the winter months</li>
-                        </ul>
-                    </div>
-                    <div class="col-sm activity-list">
-                        <h3>Nearby Attractions</h3>
-                        <h6>Outdoor Activities</h6>
-                        <ul>
-                            <li>Sherwood Forest Country Park</li>
-                            <li>Rufford Abbey Country Park</li>
-                            <li>Edwinstowe Cricket Club</li>
-                        </ul>
-                        <h6>Shops and Services</h6>
-                        <ul>
-                            <li>Edwinstowe Co-Op</li>
-                            <li>Post Office</li>
-                            <li>Ollerton Tesco and Fuel Station</li>
-                        </ul>
-                        <h6>Bars and Restaraunts</h6>
-                        <ul>
-                            <li>Royal Oak Bar and Restaraunt</li>
-                            <li>Launays Tapas and Bar</li>
-                            <li>Smoke&Ice Bar and Restaraunt</li>
-                        </ul>
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19125.310241976742!2d-1.0825889254403605!3d53.18801088120139!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4879b06bfa8afb65%3A0x50e1ca8bbc34700!2sEdwinstowe%2C%20Mansfield!5e0!3m2!1sen!2suk!4v1632737192352!5m2!1sen!2suk"
-                            alt="edwinstowe google map link" id="edwinstowe-map"></iframe>
-                    </div>
+            </div>
+            <div class="row-contain">
+                <div class="col-sm activity-text">
+                    <h3>Hiking Routes <i class="fas fa-hiking"></i></h3>
+                    <p>Explore the 500 acre park through our beautiful hiking routes. Our hiking routes have drinks
+                        stations and toilets dotted around so no need to worry! Our team of rangers are consistently
+                        driving round the park doing their day to day roles, but fear not they are there to help you
+                        if needs be!
+                        <br>
+                        We suggest you cater 3 hours of your day if you wish to see everything the park has to offer
+                    </p>
                 </div>
             </div>
+            <div class="row-contain">
+                <div class="col-sm activity-text">
+                    <h3>Glamping Site <i class="fas fa-campground"></i></h3>
+                    <img src="assets/images/pod.jpg" id="pod">
+                    <p>We have 15 glamping pods available to book now! All glamping customers get free entry into
+                        the park!
+                        <br>
+                        All Pods Include -
+                    </p>
+                    <ul>
+                        <li>Sleeps up to 4 people</li>
+                        <li>Free WIFI (Password left in pod)</li>
+                        <li>Complimentary Tea & Coffee</li>
+                        <li>1 Double Bed & 1 Sofa Bed</li>
+                        <li>Fresh Bedding & Towels Provided</li>
+                        <li>Bathroom with Shower</li>
+                        <li>Underfloor Heating for the winter months</li>
+                    </ul>
+                </div>
+                <div class="col-sm activity-text activity-list">
+                    <h3>Nearby Attractions</h3>
+                    <h6>Outdoor Activities</h6>
+                    <ul>
+                        <li>Sherwood Forest Country Park</li>
+                        <li>Rufford Abbey Country Park</li>
+                        <li>Edwinstowe Cricket Club</li>
+                    </ul>
+                    <h6>Shops and Services</h6>
+                    <ul>
+                        <li>Edwinstowe Co-Op</li>
+                        <li>Post Office</li>
+                        <li>Ollerton Tesco and Fuel Station</li>
+                    </ul>
+                    <h6>Bars and Restaraunts</h6>
+                    <ul>
+                        <li>Royal Oak Bar and Restaraunt</li>
+                        <li>Launays Tapas and Bar</li>
+                        <li>Smoke&Ice Bar and Restaraunt</li>
+                    </ul>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19125.310241976742!2d-1.0825889254403605!3d53.18801088120139!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4879b06bfa8afb65%3A0x50e1ca8bbc34700!2sEdwinstowe%2C%20Mansfield!5e0!3m2!1sen!2suk!4v1632737192352!5m2!1sen!2suk"
+                        alt="edwinstowe google map link" id="edwinstowe-map"></iframe>
+                </div>
+            </div>
+        </div>
     </section>
     <!--footer section-->
     <section>
