--- a/area.html
+++ b/area.html
@@ -53,9 +53,11 @@
                     <ul>
                         <li>800 Brand New Homes from Leading Housing Developers
                             <ul class="developers">
-                                <li><a href="https://www.harronhomes.com/find-a-home/nottinghamshire/thoresby-vale/">Harron
+                                <li><a href="https://www.harronhomes.com/find-a-home/nottinghamshire/thoresby-vale/"
+                                        target="_blank">Harron
                                         Homes</a></li>
-                                <li><a href="https://www.dwh.co.uk/new-homes/nottinghamshire/h806601-thoresby-vale/">David
+                                <li><a href="https://www.dwh.co.uk/new-homes/nottinghamshire/h806601-thoresby-vale/"
+                                        target="_blank">David
                                         Wilson Homes</a>
                             </ul>
                         </li>
@@ -66,7 +68,7 @@
                         <li>Grocery Store</li>
                     </ul>
                 </div>
-                <div class="col-sm">
+                <div class="col-sm video">
                     <iframe src="https://www.youtube.com/embed/0RPUWoB8Zvw" alt="Thoresby Vale village video"
                         id="thoresby-vale" allowfullscreen></iframe>
                 </div>
