--- a/index.html
+++ b/index.html
@@ -64,17 +64,18 @@
   </section>
   <!--introduction text section-->
   <section>
-    <div class="container">
-      <div class="row">
+    <div class="container-home">
+      <div class="row-home">
         <div class="col welcome">
-          <h3> <i class="fas fa-tree"></i> Why choose us for your next family trip or holiday? <i
-              class="fas fa-tree"></i> </h3>
+          <h3> <i class="fas fa-tree"></i> The Brand new Thoresby Vale Experience <i class="fas fa-tree"></i> </h3>
           <p>We offer an abundance of activities to suit all needs. Whether that be a challenging hike up the hills of
             Thoresby, or an intense cycle route with plenty of jumps and challenging terrain for the experienced
             cyclists.
           </p>
+          <p> Entrance Prices start at £5 per car *which include a 10% voucher redeemable at the Miners Cafe*</p>
           <h3> <i class="fas fa-campground"></i> Why not extend your stay? <i class="fas fa-campground"></i></h3>
-          <p>Take advantage of our brand new Glamping pods to give you the true forest experience.</p>
+          <p>Take advantage of our brand new Glamping pods for your next getaway.</p>
+          <p>Glamping Pod Prices Vary from Duration / Time of Year. Please get in touch to discuss your booking!</p>
         </div>
       </div>
     </div>
