add border radius to index.html images. add bckground color to section. change main logo font color to maintain good color scheme

--- a/area.html
+++ b/area.html
@@ -74,7 +74,9 @@
                 </div>
             </div>
         </div>
+        <section>
 
+        </section>
     </section>
     <!--footer section-->
     <section>
