add robin hood history and images to page, styling start (not completed)

--- a/area.html
+++ b/area.html
@@ -44,7 +44,7 @@
         </div>
     </nav>
     <section>
-        <div class="container-video">
+        <div class="container-fluid container-video">
             <div class="row">
                 <div class="col-sm video-text">
                     <h3>Thoresby Vale New Build Village</h3>
@@ -74,9 +74,31 @@
                 </div>
             </div>
         </div>
-        <section>
-
-        </section>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row-robin-hood">
+                <div class="col">
+                    <h3>The Famous Robin Hood</h3>
+                    <p>Robin Hood is an iconic figure to the Nottinghamshire area. He was known to be a crafty
+                        archer and sword fighter. Robin Hood is believed to of taken residence in the 'Major Oak'.
+                        It is believed Robin Hood was in a regular battle over his lands and would steal from the
+                        rich to provide for the poor.</p>
+                </div>
+            </div>
+            <div class="row-majoroak oak-statue">
+                <div class="col">
+                    <h3>The Major Oak</h3>
+                    <p>Robin Hoods Home</p>
+                    <img src="assets/images/major-oak.jpg">
+                </div>
+                <div class="col">
+                    <h3>Robin Hood Statue</h3>
+                    <p>Always found with a Bow and Arrow in hand!</p>
+                    <img src="assets/images/robin-hood-3315061_640.jpg">
+                </div>
+            </div>
+        </div>
     </section>
     <!--footer section-->
     <section>
