add styling to the area.html page, respsonsive to 320px looks good

--- a/area.html
+++ b/area.html
@@ -44,7 +44,7 @@
         </div>
     </nav>
     <section>
-        <div class="container-fluid container-video">
+        <div class="container container-video">
             <div class="row">
                 <div class="col-sm video-text">
                     <h3>Thoresby Vale New Build Village</h3>
@@ -68,10 +68,10 @@
                         <li>Grocery Store</li>
                     </ul>
                 </div>
-                <div class="col-sm video">
-                    <iframe src="https://www.youtube.com/embed/0RPUWoB8Zvw" alt="Thoresby Vale village video"
-                        id="thoresby-vale" allowfullscreen></iframe>
-                </div>
+            </div>
+            <div class="row video">
+                <iframe src="https://www.youtube.com/embed/0RPUWoB8Zvw" alt="Thoresby Vale village video"
+                    id="thoresby-vale" allowfullscreen></iframe>
             </div>
         </div>
     </section>
@@ -86,13 +86,15 @@
                         rich to provide for the poor.</p>
                 </div>
             </div>
-            <div class="row-majoroak oak-statue">
-                <div class="col">
+        </div>
+        <div class="container">
+            <div class="row oak">
+                <div class="col-sm">
                     <h3>The Major Oak</h3>
-                    <p>Robin Hoods Home</p>
+                    <p>Robin Hoods Residence</p>
                     <img src="assets/images/major-oak.jpg">
                 </div>
-                <div class="col">
+                <div class="col-sm">
                     <h3>Robin Hood Statue</h3>
                     <p>Always found with a Bow and Arrow in hand!</p>
                     <img src="assets/images/robin-hood-3315061_640.jpg">
