index.html code validated. 1 error (no heading see readme)

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" id="link" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link active" style="color:yellow" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="link" href="activities.html">Activities</a>
+            <a class="nav-link" style="color:yellow" href="activities.html">Activities</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="link" href="area.html">Area</a>
+            <a class="nav-link" style="color:yellow" href="area.html">Area</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="link" href="contact.html">Contact</a>
+            <a class="nav-link" style="color:yellow" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -49,18 +49,19 @@
       <div class="row">
         <div class="col-sm">
           <h3>Walking Routes</h3>
-          <img src="assets/images/thoresbyvale.jpg">
+          <img src="assets/images/thoresbyvale.jpg" alt="Park CGI plan">
         </div>
         <div class="col-sm">
           <h3>Beautiful Forestry</h3>
-          <img src="assets/images/forest-1072828_1280.jpg">
+          <img src="assets/images/forest-1072828_1280.jpg" alt="forestry surroundings">
         </div>
         <div class="col-sm">
           <h3>Glamping Pods Available</h3>
-          <img src="assets/images/glamping-1695468_1280.jpg">
+          <img src="assets/images/glamping-1695468_1280.jpg" alt="glamping pods on offer at the park">
         </div>
       </div>
       <br>
+    </div>
   </section>
   <!--introduction text section-->
   <section>
@@ -78,7 +79,6 @@
           <p>Glamping Pod Prices Vary from Duration / Time of Year. Please get in touch to discuss your booking!</p>
         </div>
       </div>
-    </div>
     </div>
   </section>
   <!--footer section-->
