activites.html and area.html validated. 1 error (no heading see readme)

--- a/area.html
+++ b/area.html
@@ -28,16 +28,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" id="link" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" style="color:yellow" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="link" href="activities.html">Activities</a>
+                        <a class="nav-link" style="color:yellow" href="activities.html">Activities</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" id="link" href="area.html">Area</a>
+                        <a class="nav-link active" style="color:yellow" href="area.html">Area</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="link" href="contact.html">Contact</a>
+                        <a class="nav-link" style="color:yellow" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -70,8 +70,7 @@
                 </div>
             </div>
             <div class="row video">
-                <iframe src="https://www.youtube.com/embed/0RPUWoB8Zvw" alt="Thoresby Vale village video"
-                    id="thoresby-vale" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/0RPUWoB8Zvw" id="thoresby-vale" allowfullscreen></iframe>
             </div>
         </div>
     </section>
@@ -92,12 +91,12 @@
                 <div class="col-sm">
                     <h3>The Major Oak</h3>
                     <p>Robin Hoods Residence</p>
-                    <img src="assets/images/major-oak.jpg">
+                    <img src="assets/images/major-oak.jpg" alt="The Major Oak">
                 </div>
                 <div class="col-sm">
                     <h3>Robin Hood Statue</h3>
                     <p>Always found with a Bow and Arrow in hand!</p>
-                    <img src="assets/images/robin-hood-3315061_640.jpg">
+                    <img src="assets/images/robin-hood-3315061_640.jpg" alt="Robin Hood Statue">
                 </div>
             </div>
         </div>
