--- a/activities.html
+++ b/activities.html
@@ -28,16 +28,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" id="link" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" style="color:yellow" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" id="link" href="activities.html">Activities</a>
+                        <a class="nav-link active" style="color:yellow" href="activities.html">Activities</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="link" href="area.html">Area</a>
+                        <a class="nav-link" style="color:yellow" href="area.html">Area</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="link" href="contact.html">Contact</a>
+                        <a class="nav-link" style="color:yellow" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -94,7 +94,7 @@
             <div class="row-contain">
                 <div class="col-sm activity-text">
                     <h3>Glamping Site <i class="fas fa-campground"></i></h3>
-                    <img src="assets/images/pod.jpg" id="pod">
+                    <img src="assets/images/pod.jpg" id="pod" alt="glamping pod rental">
                     <p>We have 15 glamping pods available to book now! All glamping customers get free entry into
                         the park!
                         <br>
@@ -132,7 +132,7 @@
                     </ul>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19125.310241976742!2d-1.0825889254403605!3d53.18801088120139!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4879b06bfa8afb65%3A0x50e1ca8bbc34700!2sEdwinstowe%2C%20Mansfield!5e0!3m2!1sen!2suk!4v1632737192352!5m2!1sen!2suk"
-                        alt="edwinstowe google map link" id="edwinstowe-map"></iframe>
+                        id="edwinstowe-map"></iframe>
                 </div>
             </div>
         </div>
