--- a/contact.html
+++ b/contact.html
@@ -28,23 +28,58 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" id="link" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" style="color:yellow" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="link" href="activities.html">Activities</a>
+                        <a class="nav-link" style="color:yellow" href="activities.html">Activities</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="link" href="area.html">Area</a>
+                        <a class="nav-link" style="color:yellow" href="area.html">Area</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" id="link" href="contact.html">Contact</a>
+                        <a class="nav-link active" style="color:yellow" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <section>
-        contact form
+        <div class="container">
+            <form action="index.html" method="GET">
+                <div class="row contact">
+                    <div class="col-sm">
+                        <div class="mb-3">
+                            <label for="exampleFormControlInput1" class="form-label">First Name</label>
+                            <input type="text" class="form-control" id="exampleFormControlInput1"
+                                placeholder="First Name">
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleFormControlInput2" class="form-label">Surname</label>
+                            <input type="text" class="form-control" id="exampleFormControlInput2" placeholder="Surname"
+                                required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleFormControlInput2" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput3"
+                                placeholder="name@example.com" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleFormControlTextarea1" class="form-label">Your Enquiry</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"
+                                placeholder="Please enter your enquiry (including booking dates if applicable)"
+                                required></textarea>
+                        </div>
+                        <button> <input class="controls" type="button" value="Submit"> </button>
+                        <button> <input class="controls" type="reset" value="Reset"> </button>
+                    </div>
+                    <div class="col-sm">
+                        <h3>Find Us Here</h3>
+                        <iframe class="map"
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2842.288862470542!2d-1.0535659817457497!3d53.198651551393155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2suk!4v1632911805703!5m2!1sen!2suk"></iframe>
+                    </div>
+                </div>
+            </form>
+        </div>
     </section>
     <!--footer section-->
     <section>
