add background image to improve feel of website. added borders and background colour to index.html main grid h3 due to font issues after bckground image

--- a/area.html
+++ b/area.html
@@ -49,7 +49,7 @@
                 <div class="col-sm video-text">
                     <h3>Thoresby Vale New Build Village</h3>
                     <p>Thoresby Vale is a brand new development situated in Edwinstowe. Thoresby Vale is set to home the
-                        following -</p>
+                        following...</p>
                     <ul>
                         <li>800 Brand New Homes from Leading Housing Developers
                             <ul class="developers">
