--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
   <section class="main-grid">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm">
+        <div class="col-sm" style="padding-top: 5px;">
           <h3>Walking Routes</h3>
           <img src="assets/images/thoresbyvale.jpg" alt="Park CGI plan">
         </div>
-        <div class="col-sm">
+        <div class="col-sm" style="padding-top: 5px;">
           <h3>Beautiful Forestry</h3>
           <img src="assets/images/forest-1072828_1280.jpg" alt="forestry surroundings">
         </div>
-        <div class="col-sm">
+        <div class="col-sm" style="padding-top: 5px;">
           <h3>Glamping Pods Available</h3>
           <img src="assets/images/glamping-1695468_1280.jpg" alt="glamping pods on offer at the park">
         </div>
