re-assign section to a footer to follow semantic markup on all pagess (no styling changes)

--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
         </div>
     </section>
     <!--footer section-->
-    <section>
+    <footer>
         <div class="container-fluid container-footer">
             <div class="row align-items-center">
                 <div class="col">
@@ -96,7 +96,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
     </script>
