fix class names so they arent overriding bootstrap grid system, re style home page to give fresher look

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <title>Thoresby Vale Country Park</title>
 </head>
 
-<body>
+<body class="home-page">
   <!--bootstrap navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
@@ -49,15 +49,15 @@
       <div class="row">
         <div class="col-sm" style="padding-top: 5px;">
           <h3>Walking Routes</h3>
-          <img src="assets/images/thoresbyvale.jpg" alt="Park CGI plan">
+          <img src="assets/images/thoresby-vale.jpg" alt="Park CGI plan">
         </div>
         <div class="col-sm" style="padding-top: 5px;">
           <h3>Beautiful Forestry</h3>
-          <img src="assets/images/forest-1072828_1280.jpg" alt="forestry surroundings">
+          <img src="assets/images/forest.jpg" alt="forestry surroundings">
         </div>
         <div class="col-sm" style="padding-top: 5px;">
           <h3>Glamping Pods Available</h3>
-          <img src="assets/images/glamping-1695468_1280.jpg" alt="glamping pods on offer at the park">
+          <img src="assets/images/glamping.jpg" alt="glamping pods on offer at the park">
         </div>
       </div>
       <br>
@@ -65,8 +65,8 @@
   </section>
   <!--introduction text section-->
   <section>
-    <div class="container-home">
-      <div class="row-home">
+    <div class="container-fluid container-home">
+      <div class="row row-home">
         <div class="col welcome">
           <h3> <i class="fas fa-tree"></i> The Brand new Thoresby Vale Experience <i class="fas fa-tree"></i> </h3>
           <p>We offer an abundance of activities to suit all needs. Whether that be a challenging hike up the hills of
