add media query for sizes below 768px - adjust font size on drop down nav to 1em and align text to center

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" style="color:yellow" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link nav-link-custom active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color:yellow" href="activities.html">Activities</a>
+            <a class="nav-link nav-link-custom" href="activities.html">Activities</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color:yellow" href="area.html">Area</a>
+            <a class="nav-link nav-link-custom" href="area.html">Area</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color:yellow" href="contact.html">Contact</a>
+            <a class="nav-link nav-link-custom" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -47,15 +47,15 @@
   <section class="main-grid">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm" style="padding-top: 5px;">
+        <div class="col-xl">
           <h3>Walking Routes</h3>
           <img src="assets/images/thoresby-vale.jpg" alt="Park CGI plan">
         </div>
-        <div class="col-sm" style="padding-top: 5px;">
+        <div class="col-xl">
           <h3>Beautiful Forestry</h3>
           <img src="assets/images/forest.jpg" alt="forestry surroundings">
         </div>
-        <div class="col-sm" style="padding-top: 5px;">
+        <div class="col-xl">
           <h3>Glamping Pods Available</h3>
           <img src="assets/images/glamping.jpg" alt="glamping pods on offer at the park">
         </div>
@@ -65,10 +65,10 @@
   </section>
   <!--introduction text section-->
   <section>
-    <div class="container-fluid container-home">
+    <div class="container-fluid">
       <div class="row row-home">
         <div class="col welcome">
-          <h3> <i class="fas fa-tree"></i> The Brand new Thoresby Vale Experience <i class="fas fa-tree"></i> </h3>
+          <h3> <i class="fas fa-tree"></i> The Thoresby Vale Experience <i class="fas fa-tree"></i> </h3>
           <p>We offer an abundance of activities to suit all needs. Whether that be a challenging hike up the hills of
             Thoresby, or an intense cycle route with plenty of jumps and challenging terrain for the experienced
             cyclists.
