--- a/area.html
+++ b/area.html
@@ -28,16 +28,17 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" style="color:yellow" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link nav-link-custom" style="color:yellow" aria-current="page"
+                            href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" style="color:yellow" href="activities.html">Activities</a>
+                        <a class="nav-link nav-link-custom" style="color:yellow" href="activities.html">Activities</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" style="color:yellow" href="area.html">Area</a>
+                        <a class="nav-link nav-link-custom active" style="color:yellow" href="area.html">Area</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" style="color:yellow" href="contact.html">Contact</a>
+                        <a class="nav-link nav-link-custom" style="color:yellow" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
