--- a/activities.html
+++ b/activities.html
@@ -51,7 +51,6 @@
             <div class="row-contain">
                 <div class="col-sm activity-text">
                     <h3>Cycling Courses <i class="fas fa-biking"></i></h3>
-                    <h6>Pre-defined Routes</h6>
                     <p>We have six routes designed for all experience levels and ages.
                         There is a selection of bikes to rent (these will require pre-booking before your visit) if you
                         need to do so.
@@ -93,8 +92,8 @@
                     </p>
                 </div>
             </div>
-            <div class="row-contain">
-                <div class="col-sm activity-text">
+            <div class=" row row-contain">
+                <div class="col-12 activity-text">
                     <h3>Glamping Site <i class="fas fa-campground"></i></h3>
                     <img src="assets/images/pod.jpg" id="pod" alt="glamping pod rental">
                     <p>We have 15 glamping pods available to book now! All glamping customers get free entry into
@@ -112,7 +111,7 @@
                         <li>Underfloor Heating for the winter months</li>
                     </ul>
                 </div>
-                <div class="col-sm activity-text activity-list">
+                <div class="col activity-text activity-list">
                     <h3>Nearby Attractions</h3>
                     <h6>Outdoor Activities</h6>
                     <ul>
