--- a/activities.html
+++ b/activities.html
@@ -48,8 +48,8 @@
     <section>
         <br>
         <div class="container activities">
-            <div class="row-contain">
-                <div class="col-sm activity-text">
+            <div class="row row-contain">
+                <div class="col activity-text">
                     <h3>Cycling Courses <i class="fas fa-biking"></i></h3>
                     <p>We have six routes designed for all experience levels and ages.
                         There is a selection of bikes to rent (these will require pre-booking before your visit) if you
@@ -80,8 +80,8 @@
                     </ul>
                 </div>
             </div>
-            <div class="row-contain">
-                <div class="col-sm activity-text">
+            <div class="row row-contain">
+                <div class="col activity-text">
                     <h3>Hiking Routes <i class="fas fa-hiking"></i></h3>
                     <p>Explore the 500 acre park through our beautiful hiking routes. Our hiking routes have drinks
                         stations and toilets dotted around so no need to worry! Our team of rangers are consistently
@@ -92,10 +92,10 @@
                     </p>
                 </div>
             </div>
-            <div class=" row row-contain">
+            <div class="row row-contain">
                 <div class="col-12 activity-text">
                     <h3>Glamping Site <i class="fas fa-campground"></i></h3>
-                    <img src="assets/images/pod.jpg" id="pod" alt="glamping pod rental">
+                    <img src="assets/images/pod.jpg" class="pod" alt="glamping pod rental">
                     <p>We have 15 glamping pods available to book now! All glamping customers get free entry into
                         the park!
                         <br>
