add all meta tags required and add noopener to footer links on all pages as per lighthouse results

--- a/activities.html
+++ b/activities.html
@@ -142,13 +142,13 @@
         <div class="container-fluid container-footer">
             <div class="row align-items-center">
                 <div class="col">
-                    <a href="http://facebook.com" target="_blank"> <i class="fab fa-facebook"></i></a>
+                    <a href="http://facebook.com" rel="noopener" target="_blank"> <i class="fab fa-facebook"></i></a>
                 </div>
                 <div class="col">
-                    <a href="http://twitter.com" target="_blank"> <i class="fab fa-twitter"></i></a>
+                    <a href="http://twitter.com" rel="noopener" target="_blank"> <i class="fab fa-twitter"></i></a>
                 </div>
                 <div class="col">
-                    <a href="http://instagram.com" target="_blank"> <i class="fab fa-instagram"></i></a>
+                    <a href="http://instagram.com" rel="noopener" target="_blank"> <i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
