--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Thoresby Vale Country Park Information Website">
+  <meta name="keywords" content="thoresby vale, hiking, cycling, glamping, edwinstowe">
+  <meta name="author" content="Nathan Cave">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/style.css">
@@ -16,7 +19,7 @@
   <title>Thoresby Vale Country Park</title>
 </head>
 
-<body class="home-page">
+<body>
   <!--bootstrap navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
@@ -49,15 +52,15 @@
       <div class="row">
         <div class="col-xl">
           <h3>Walking Routes</h3>
-          <img src="assets/images/thoresby-vale.jpg" alt="Park CGI plan">
+          <img src="assets/images/thoresby-vale.webp" alt="Park CGI plan">
         </div>
         <div class="col-xl">
           <h3>Beautiful Forestry</h3>
-          <img src="assets/images/forest.jpg" alt="forestry surroundings">
+          <img src="assets/images/forest.webp" alt="forestry surroundings">
         </div>
         <div class="col-xl">
           <h3>Glamping Pods Available</h3>
-          <img src="assets/images/glamping.jpg" alt="glamping pods on offer at the park">
+          <img src="assets/images/glamping.webp" alt="glamping pods on offer at the park">
         </div>
       </div>
       <br>
@@ -86,13 +89,13 @@
     <div class="container-fluid container-footer">
       <div class="row align-items-center">
         <div class="col">
-          <a href="http://facebook.com" target="_blank"> <i class="fab fa-facebook"></i></a>
+          <a href="http://facebook.com" rel="noopener" target="_blank"> <i class="fab fa-facebook"></i></a>
         </div>
         <div class="col">
-          <a href="http://twitter.com" target="_blank"> <i class="fab fa-twitter"></i></a>
+          <a href="http://twitter.com" rel="noopener" target="_blank"> <i class="fab fa-twitter"></i></a>
         </div>
         <div class="col">
-          <a href="http://instagram.com" target="_blank"> <i class="fab fa-instagram"></i></a>
+          <a href="http://instagram.com" rel="noopener" target="_blank"> <i class="fab fa-instagram"></i></a>
         </div>
       </div>
     </div>
