re-style buttons on contact form for a more proffessional look

--- a/contact.html
+++ b/contact.html
@@ -68,10 +68,11 @@
                             <label for="exampleFormControlTextarea1" class="form-label">Your Enquiry</label>
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"
                                 placeholder="Please enter your enquiry (including booking dates if applicable)"
-                                required></textarea>
+                                required> </textarea>
+
                         </div>
-                        <button> <input class="controls" type="button" value="Submit"> </button>
-                        <button> <input class="controls" type="reset" value="Reset"> </button>
+                        <input class="btn-custom" type="submit" value="Submit">
+                        <input class="btn-custom" type="reset" value="Reset">
                     </div>
                     <div class="col-sm">
                         <h3>Find Us Here</h3>
